--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </nav>
         <section class="background">
             <div class="home-heading-con">
-              <img class="logo-img" src="/images/logo.jpg" alt="logo">
+              <img class="logo-img" src="./images/logo.jpg" alt="logo">
               <h1 class="home-heading text-white">Your clothes,our passion</h1>
             </div>
             <div class="search-bar">
