--- a/search.html
+++ b/search.html
@@ -45,7 +45,7 @@
         </nav>
     <section class="background">
         <div class="heading">
-            <img class="logo-img" src="/images/logo.jpg" alt="logo">
+            <img src="./images/logo.jpg" alt="logo">
 		    <p class="text-white">Over 120,000 items available!</p>
         </div>
         <div class="search-bar">
