Fixed the html validator errors

--- a/index.html
+++ b/index.html
@@ -147,54 +147,6 @@
                 <div class="arrow d-none d-md-block"><a href="#" class="fas fa-chevron-left"></a></div>
                 <div class="card">
                     <div class="border-0">
-                        <a href="#"><img class="card-img-top w-100" src="./images/headwear1.jpg" alt="headwear"></a>
-                    </div>
-                    <div class="card-body">
-                        <div class="card-title font-weight-bold"><h3>African headwear</h3></div>
-                        <div class="card-text">
-                            <h6 class="font-weight-bold make pb-2">Bandanas</h6>
-                            <p><span>From: </span>Kampala, Uganda</p>
-                        </div>
-                        <div class="dropup d-flex align-items-baseline justify-content-between">
-                            <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
-                                +
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownMenuButton">
-                                <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
-                                <a class="dropdown-item btn-dark" href="#">Send a Message</a>
-                                <a class="dropdown-item btn-dark" href="#">More Details</a>
-                            </div>
-                            <h5 class="price">$300.00</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="card"> 
-                    <div class="border-0">
-                        <a href="#"><img class="card-img-top w-100" src="./images/headwear2.jpg" alt="headwear"></a>
-                    </div>
-                    <div class="card-body">
-                        <div class="card-title font-weight-bold"><h3>African headwear</h3></div>
-                        <div class="card-text">
-                            <h6 class="font-weight-bold make pb-2">Bandanas</h6>
-                            <p><span>From: </span>Kampala, Uganda</p>
-                        </div>
-                        <div class="dropup d-flex align-items-baseline justify-content-between">
-                            <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
-                                +
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
-                                <a class="dropdown-item btn-dark" href="#">Send a Message</a>
-                                <a class="dropdown-item btn-dark" href="#">More Details</a>
-                            </div>
-                            <h5 class="price">$320.00</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="border-0">
                         <a href="#"><img class="card-img-top w-100" src="./images/headwear3.jpg" alt="men'sheadwear"></a>
                     </div>
                     <div class="card-body">
@@ -208,7 +160,7 @@
                                 aria-expanded="false">
                                 +
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                                 <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
                                 <a class="dropdown-item btn-dark" href="#">Send a Message</a>
                                 <a class="dropdown-item btn-dark" href="#">More Details</a>
@@ -232,7 +184,55 @@
                                 aria-expanded="false">
                                 +
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
+                                <a class="dropdown-item btn-dark" href="#">Send a Message</a>
+                                <a class="dropdown-item btn-dark" href="#">More Details</a>
+                            </div>
+                            <h5 class="price">$450.00</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="border-0">
+                        <a href="#"><img class="card-img-top w-100" src="./images/headwear3.jpg" alt="men'sheadwear"></a>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-title font-weight-bold"><h3>African headwear</h3></div>
+                        <div class="card-text">
+                            <h6 class="font-weight-bold make pb-2">Bandanas</h6>
+                            <p><span>From: </span>Kampala, Uganda</p>
+                        </div>
+                        <div class="dropup d-flex align-items-baseline justify-content-between">
+                            <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                +
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
+                                <a class="dropdown-item btn-dark" href="#">Send a Message</a>
+                                <a class="dropdown-item btn-dark" href="#">More Details</a>
+                            </div>
+                            <h5 class="price">$320.00</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="border-0">
+                        <a href="#"><img class="card-img-top w-100" src="./images/headwear4.jpg" alt="headwear"></a>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-title font-weight-bold"><h3>African headwear</h3></div>
+                        <div class="card-text">
+                            <h6 class="font-weight-bold make pb-2">Bandanas</h6>
+                            <p><span>From: </span> Kampala, Uganda</p>
+                        </div>
+                        <div class="dropup d-flex align-items-baseline justify-content-between">
+                            <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                +
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                                 <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
                                 <a class="dropdown-item btn-dark" href="#">Send a Message</a>
                                 <a class="dropdown-item btn-dark" href="#">More Details</a>
@@ -249,7 +249,7 @@
             <div class="border-bottom my-3 mx-3">
               <h2><i class="fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
             </div>
-            <div class="accessory my-4 mx-4">
+            <div class="accessory  my-4 mx-4">
                 <div class="arrow d-none d-md-block"><a href="#" class="fas fa-chevron-left"></a></div>
                 <div class="card">
                     <div class="border-0">
@@ -266,7 +266,7 @@
                                 aria-expanded="false">
                                 +
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                                 <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
                                 <a class="dropdown-item btn-dark" href="#">Send a Message</a>
                                 <a class="dropdown-item btn-dark" href="#">More Details</a>
@@ -294,7 +294,7 @@
                               aria-expanded="false">
                               +
                           </button>
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                               <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
                               <a class="dropdown-item btn-dark" href="#">Send a Message</a>
                               <a class="dropdown-item btn-dark" href="#">More Details</a>
@@ -322,7 +322,7 @@
                               aria-expanded="false">
                               +
                           </button>
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                               <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
                               <a class="dropdown-item btn-dark" href="#">Send a Message</a>
                               <a class="dropdown-item btn-dark" href="#">More Details</a>
@@ -350,7 +350,7 @@
                               aria-expanded="false">
                               +
                           </button>
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                               <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
                               <a class="dropdown-item btn-dark" href="#">Send a Message</a>
                               <a class="dropdown-item btn-dark" href="#">More Details</a>
@@ -396,20 +396,6 @@
                         <span>+256774500675</span>
                     </div>
                 </div>
-                <div class="footer-bottom-info">
-                    <h2 class="get">SUPPORT</h2>
-                    <div class="pt-3">
-                        <div>
-                            <span><a href="#">Privacy Statement</a></span>
-                        </div>
-                        <div class="pt-2">
-                            <span><a href="#">Delivery Information</a></span>
-                        </div>
-                        <div class="pt-2">
-                            <span><a href="#">Contact Us</a></span>
-                        </div>
-                    </div>
-                </div>
             </div>
             <div class="flex-container">
                 <div class="footer-bottom-info">
@@ -423,16 +409,6 @@
                         </div>
                         <div class="py-2">
                             <span><a href="#">Terms & Conditions</a></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer-bottom-info">
-                    <h2 class="get">OPENING HOURS</h2>
-                    <div class="pt-3">
-                        <div>
-                            <span>Monday - Friday</span>
-                            <br>
-                            <small>8am to 5pm</small>
                         </div>
                     </div>
                 </div>
