--- a/search.html
+++ b/search.html
@@ -28,10 +28,10 @@
                 <a class="nav-list" href="index.html"><i class="fas fa-home fa-1x"></i> HOME</a>
                 </li>
                 <li class="nav-item pb-1">
-                <a class="nav-list" href="about.html"><i class="fas fa-columns fa-1x"></i> ABOUT</a>
+                <a class="nav-list" href="index.html"><i class="fas fa-columns fa-1x"></i> ABOUT</a>
                 </li>
                 <li class="nav-item pb-1">
-                    <a class="nav-list" href="about.html"><i class="fas fa-shopping-cart fa-1x"></i> CHECKOUT</a>
+                    <a class="nav-list" href="index.html"><i class="fas fa-shopping-cart fa-1x"></i> CHECKOUT</a>
                 </li>
                 <li><button class="btn text-white">POST AN AD</button></li>
             </ul>
@@ -43,31 +43,31 @@
                 </a>
             </div>
         </nav>
-    <section class="background">
-        <div class="heading">
-            <img src="./images/logo.jpg" alt="logo">
-		    <p class="text-white">Over 120,000 items available!</p>
-        </div>
-        <div class="search-bar">
-            <form action="search.html" class="d-flex justify-content-center main-form">
-                <div class="dropdown">
-                    <button class="btn bg-white dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Categories
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <button class="dropdown-item" type="button">Men</button>
-                        <button class="dropdown-item" type="button">Women</button>
-                        <button class="dropdown-item" type="button">Handbag</button>
-                        <button class="dropdown-item" type="button">Accessories</button>
+        <section class="background">
+            <div class="home-heading-con">
+              <img class="logo-img" src="./images/logo.jpg" alt="logo">
+              <h1 class="home-heading text-white">Your clothes,our passion</h1>
+            </div>
+            <div class="search-bar">
+                <form action="search.html" class="d-flex justify-content-center main-form">
+                    <div class="dropdown">
+                        <button class="btn bg-white dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Categories
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                            <button class="dropdown-item" type="button">Men</button>
+                            <button class="dropdown-item" type="button">Women</button>
+                            <button class="dropdown-item" type="button">Handbag</button>
+                            <button class="dropdown-item" type="button">Accessories</button>
+                        </div>
                     </div>
-                </div>
-                <input type="text" placeholder="Search skirts,tops" class="text-area px-2 mx-1">
-                <input type="text"  placeholder="price" class="text-area px-2">
-                <button class="bg-dark text-white border-0 search-btn">Search</button>
-            </form>
-        </div>
-    </section>
+                    <input type="text" placeholder="Search skirts,tops" class="text-area px-2 mx-1">
+                    <input type="text"  placeholder="price" class="text-area px-2">
+                    <button class="bg-dark text-white border-0 search-btn">Search</button>
+                </form>
+            </div>
+        </section>
     <!-- main section -->
     <main class="bg-light my-3 mx-4">
         <div class="container-fluid">
@@ -147,7 +147,7 @@
                                         aria-expanded="false">
                                         +
                                     </button>
-                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownMenuButton">
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                                         <a class="dropdown-item btn-dark" href="#">More Details</a>
                                         <a class="dropdown-item btn-dark" href="#">Rate this Product</a>
                                     </div>
@@ -181,7 +181,7 @@
                                       aria-expanded="false">
                                       +
                                   </button>
-                                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownMenuButton">
+                                  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                                       <a class="dropdown-item btn-dark" href="#">More Details</a>
                                       <a class="dropdown-item btn-dark" href="#">Rate this Product</a>
                                   </div>
@@ -215,7 +215,7 @@
                                       aria-expanded="false">
                                       +
                                   </button>
-                                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownMenuButton">
+                                  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                                       <a class="dropdown-item btn-dark" href="#">More Details</a>
                                       <a class="dropdown-item btn-dark" href="#">Rate this Product</a>
                                   </div>
@@ -249,7 +249,7 @@
                                       aria-expanded="false">
                                       +
                                   </button>
-                                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownMenuButton">
+                                  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                                       <a class="dropdown-item btn-dark" href="#">More Details</a>
                                       <a class="dropdown-item btn-dark" href="#">Rate this Product</a>
                                   </div>
@@ -307,20 +307,6 @@
                         <span>+256774500675</span>
                     </div>
                 </div>
-                <div class="footer-bottom-info">
-                    <h2 class="get">SUPPORT</h2>
-                    <div class="pt-3">
-                        <div>
-                            <span><a href="#">Privacy Statement</a></span>
-                        </div>
-                        <div class="pt-2">
-                            <span><a href="#">Delivery Information</a></span>
-                        </div>
-                        <div class="pt-2">
-                            <span><a href="#">Contact Us</a></span>
-                        </div>
-                    </div>
-                </div>
             </div>
             <div class="flex-container">
                 <div class="footer-bottom-info">
@@ -334,16 +320,6 @@
                         </div>
                         <div class="py-2">
                             <span><a href="#">Terms & Conditions</a></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer-bottom-info">
-                    <h2 class="get">OPENING HOURS</h2>
-                    <div class="pt-3">
-                        <div>
-                            <span>Monday - Friday</span>
-                            <br>
-                            <small>8am to 5pm</small>
                         </div>
                     </div>
                 </div>
