Fixed the company-logo

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section class="background">
             <div class="home-heading-con">
               <img class="logo-img" src="./images/logo.jpg" alt="logo">
-              <h1 class="home-heading text-white">Your clothes,our passion</h1>
+              <h1 class="home-heading text-white font-italic">Your clothes,our passion</h1>
             </div>
             <div class="search-bar">
                 <form action="search.html" class="d-flex justify-content-center main-form">
