--- a/search.html
+++ b/search.html
@@ -44,9 +44,9 @@
             </div>
         </nav>
         <section class="background">
-            <div class="home-heading-con">
+            <div class="company-logo">
               <img class="logo-img" src="./images/logo.jpg" alt="logo">
-              <h1 class="home-heading text-white">Your clothes,our passion</h1>
+              <h1 class="company-logo-heading text-white text-center font-weight-bold font-italic">Your clothes,our passion</h1>
             </div>
             <div class="search-bar">
                 <form action="search.html" class="d-flex justify-content-center main-form">
