--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <h1 class="my-3 font-weight-bold">HOT ADS</h1>
                     <div class="carousel-item active">
                         <div class="d-block d-md-flex carousel-pad">
-                            <img src="./images/ad-image.jpg" alt="Piano"/>
+                            <img src="./images/ad-image.jpg" alt="shirt"/>
                             <div class="carousel-body pl-4">
                                 <h2 class="font-weight-bold title pb-2">Men's shirt</h2>
                                 <p> 
@@ -141,21 +141,21 @@
     <main class="bg-light">
         <div>
             <div class="border-bottom my-3 mx-3">
-                <h2><i class="fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,clothes)</span></h2>
+              <h2><i class="fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
             </div>
-            <div class="headwear my-4 mx-4">
-                <div class="arrow d-none d-md-block"><a href="#" class="fas fa-chevron-left"></a></div>
-                <div class="card">
+            <div class="accessory  my-4 mx-4">
+                <div class="arrow d-sm-none d-md-none d-lg-block"><a href="#" class="fas fa-chevron-left"></a></div>
+                <div class="card card-accessory">
                     <div class="border-0">
-                        <a href="#"><img class="card-img-top w-100" src="./images/headwear3.jpg" alt="men'sheadwear"></a>
+                        <a href="#"><img class="card-img-top w-100" src="./images/headwear1.jpg" alt="accesory"></a>
                     </div>
                     <div class="card-body">
-                        <div class="card-title font-weight-bold"><h3>African headwear</h3></div>
+                        <div class="card-title font-weight-bold"><h3>Handmade headwear</h3></div>
                         <div class="card-text">
-                            <h6 class="font-weight-bold make pb-2">Bandanas</h6>
+                            <h6 class="font-weight-bold make pb-2">Cotton</h6>
                             <p><span>From: </span>Kampala, Uganda</p>
                         </div>
-                        <div class="dropup d-flex align-items-baseline justify-content-between">
+                        <div class="dropup">
                             <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
                                 +
@@ -165,83 +165,99 @@
                                 <a class="dropdown-item btn-dark" href="#">Send a Message</a>
                                 <a class="dropdown-item btn-dark" href="#">More Details</a>
                             </div>
-                            <h5 class="price">$320.00</h5>
+                            <h5 class="price">
+                                $410
+                                <br>
+                                <span class="line-through font-weight-light">$610</span>
+                            </h5>
                         </div>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="border-0">
-                        <a href="#"><img class="card-img-top w-100" src="./images/headwear4.jpg" alt="headwear"></a>
-                    </div>
-                    <div class="card-body">
-                        <div class="card-title font-weight-bold"><h3>African headwear</h3></div>
-                        <div class="card-text">
-                            <h6 class="font-weight-bold make pb-2">Bandanas</h6>
-                            <p><span>From: </span> Kampala, Uganda</p>
-                        </div>
-                        <div class="dropup d-flex align-items-baseline justify-content-between">
-                            <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
-                                +
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                                <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
-                                <a class="dropdown-item btn-dark" href="#">Send a Message</a>
-                                <a class="dropdown-item btn-dark" href="#">More Details</a>
-                            </div>
-                            <h5 class="price">$450.00</h5>
-                        </div>
-                    </div>
+                <div class="card card-accessory">
+                  <div class="border-0">
+                      <a href="#"><img class="card-img-top w-100" src="./images/headwear2.jpg" alt="accesory"></a>
+                  </div>
+                  <div class="card-body">
+                      <div class="card-title font-weight-bold"><h3>Handmade headwear</h3></div>
+                      <div class="card-text">
+                          <h6 class="font-weight-bold make pb-2">Cotton</h6>
+                          <p><span>From: </span>Kampala, Uganda</p>
+                      </div>
+                      <div class="dropup d-flex align-items-baseline justify-content-between">
+                          <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
+                              aria-expanded="false">
+                              +
+                          </button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                              <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
+                              <a class="dropdown-item btn-dark" href="#">Send a Message</a>
+                              <a class="dropdown-item btn-dark" href="#">More Details</a>
+                          </div>
+                          <h5 class="price">
+                              $410
+                              <br>
+                              <span class="line-through font-weight-light">$610</span>
+                          </h5>
+                      </div>
+                  </div>
                 </div>
-                <div class="card">
-                    <div class="border-0">
-                        <a href="#"><img class="card-img-top w-100" src="./images/headwear3.jpg" alt="men'sheadwear"></a>
-                    </div>
-                    <div class="card-body">
-                        <div class="card-title font-weight-bold"><h3>African headwear</h3></div>
-                        <div class="card-text">
-                            <h6 class="font-weight-bold make pb-2">Bandanas</h6>
-                            <p><span>From: </span>Kampala, Uganda</p>
-                        </div>
-                        <div class="dropup d-flex align-items-baseline justify-content-between">
-                            <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
-                                +
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                                <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
-                                <a class="dropdown-item btn-dark" href="#">Send a Message</a>
-                                <a class="dropdown-item btn-dark" href="#">More Details</a>
-                            </div>
-                            <h5 class="price">$320.00</h5>
-                        </div>
-                    </div>
+                <div class="card card-accessory">
+                  <div class="border-0">
+                      <a href="#"><img class="card-img-top w-100" src="./images/headwear3.jpg" alt="accesory"></a>
+                  </div>
+                  <div class="card-body">
+                      <div class="card-title font-weight-bold"><h3>Handmade necklace</h3></div>
+                      <div class="card-text">
+                          <h6 class="font-weight-bold make pb-2">Cotton</h6>
+                          <p><span>From: </span>Kampala, Uganda</p>
+                      </div>
+                      <div class="dropup d-flex align-items-baseline justify-content-between">
+                          <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
+                              aria-expanded="false">
+                              +
+                          </button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                              <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
+                              <a class="dropdown-item btn-dark" href="#">Send a Message</a>
+                              <a class="dropdown-item btn-dark" href="#">More Details</a>
+                          </div>
+                          <h5 class="price">
+                              $310
+                              <br>
+                              <span class="line-through font-weight-light">$420</span>
+                          </h5>
+                      </div>
+                  </div>
                 </div>
-                <div class="card">
-                    <div class="border-0">
-                        <a href="#"><img class="card-img-top w-100" src="./images/headwear4.jpg" alt="headwear"></a>
-                    </div>
-                    <div class="card-body">
-                        <div class="card-title font-weight-bold"><h3>African headwear</h3></div>
-                        <div class="card-text">
-                            <h6 class="font-weight-bold make pb-2">Bandanas</h6>
-                            <p><span>From: </span> Kampala, Uganda</p>
-                        </div>
-                        <div class="dropup d-flex align-items-baseline justify-content-between">
-                            <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
-                                +
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                                <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
-                                <a class="dropdown-item btn-dark" href="#">Send a Message</a>
-                                <a class="dropdown-item btn-dark" href="#">More Details</a>
-                            </div>
-                            <h5 class="price">$450.00</h5>
-                        </div>
-                    </div>
+                <div class="card card-accessory">
+                  <div class="border-0">
+                      <a href="#"><img class="card-img-top w-100" src="./images/headwear4.jpg" alt="accesory"></a>
+                  </div>
+                  <div class="card-body">
+                      <div class="card-title font-weight-bold"><h3>Handmade necklace</h3></div>
+                      <div class="card-text">
+                          <h6 class="font-weight-bold make pb-2">Cotton</h6>
+                          <p><span>From: </span>Kampala, Uganda</p>
+                      </div>
+                      <div class="dropup d-flex align-items-baseline justify-content-between">
+                          <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
+                              aria-expanded="false">
+                              +
+                          </button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                              <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
+                              <a class="dropdown-item btn-dark" href="#">Send a Message</a>
+                              <a class="dropdown-item btn-dark" href="#">More Details</a>
+                          </div>
+                          <h5 class="price">
+                              $310
+                              <br>
+                              <span class="line-through font-weight-light">$500</span>
+                          </h5>
+                      </div>
+                  </div>
                 </div>
-                <div class="arrow d-none d-md-block"><a href="#" class="fas fa-chevron-right"></a></div>
+                <div class="arrow d-sm-none d-md-none d-lg-block"><a href="#" class="fas fa-chevron-right"></a></div>
             </div>
         </div>
 
@@ -250,8 +266,8 @@
               <h2><i class="fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
             </div>
             <div class="accessory  my-4 mx-4">
-                <div class="arrow d-none d-md-block"><a href="#" class="fas fa-chevron-left"></a></div>
-                <div class="card">
+                <div class="arrow d-sm-none d-md-none d-lg-block"><a href="#" class="fas fa-chevron-left"></a></div>
+                <div class="card card-accessory">
                     <div class="border-0">
                         <a href="#"><img class="card-img-top w-100" src="./images/accessory1.jpg" alt="accesory"></a>
                     </div>
@@ -279,7 +295,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card card-accessory">
                   <div class="border-0">
                       <a href="#"><img class="card-img-top w-100" src="./images/accessory1.jpg" alt="accesory"></a>
                   </div>
@@ -307,7 +323,7 @@
                       </div>
                   </div>
                 </div>
-                <div class="card">
+                <div class="card card-accessory">
                   <div class="border-0">
                       <a href="#"><img class="card-img-top w-100" src="./images/accessory1.jpg" alt="accesory"></a>
                   </div>
@@ -335,7 +351,7 @@
                       </div>
                   </div>
                 </div>
-                <div class="card">
+                <div class="card card-accessory">
                   <div class="border-0">
                       <a href="#"><img class="card-img-top w-100" src="./images/accessory1.jpg" alt="accesory"></a>
                   </div>
@@ -363,7 +379,7 @@
                       </div>
                   </div>
                 </div>
-                <div class="arrow d-none d-md-block"><a href="#" class="fas fa-chevron-right"></a></div>
+                <div class="arrow d-sm-none d-md-none d-lg-block"><a href="#" class="fas fa-chevron-right"></a></div>
             </div>
         </div>
     </main>
