Implement TSE changes

--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
     <main class="bg-light">
         <div>
             <div class="border-bottom my-3 mx-3">
-              <h2><i class="fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
+              <h2 class ="my-3 pt-2"><i class="pr-2 fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
             </div>
-            <div class="accessory  my-4 mx-4">
-                <div class="arrow d-sm-none d-md-none d-lg-block"><a href="#" class="fas fa-chevron-left"></a></div>
-                <div class="card card-accessory">
+            <div class="accessory  flex-grid my-4 mx-4">
+                <div class=" accessory-arrow arrow "><a href="#" class="fas fa-chevron-left"></a></div>
+                <div class="card flex-col">
                     <div class="border-0">
                         <a href="#"><img class="card-img-top w-100" src="./images/headwear1.jpg" alt="accesory"></a>
                     </div>
@@ -155,7 +155,7 @@
                             <h6 class="font-weight-bold make pb-2">Cotton</h6>
                             <p><span>From: </span>Kampala, Uganda</p>
                         </div>
-                        <div class="dropup">
+                        <div class="d-flex align-items-baseline justify-content-between">
                             <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
                                 +
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card card-accessory">
+                <div class="card flex-col">
                   <div class="border-0">
                       <a href="#"><img class="card-img-top w-100" src="./images/headwear2.jpg" alt="accesory"></a>
                   </div>
@@ -201,35 +201,35 @@
                       </div>
                   </div>
                 </div>
-                <div class="card card-accessory">
-                  <div class="border-0">
-                      <a href="#"><img class="card-img-top w-100" src="./images/headwear3.jpg" alt="accesory"></a>
-                  </div>
-                  <div class="card-body">
-                      <div class="card-title font-weight-bold"><h3>Handmade necklace</h3></div>
-                      <div class="card-text">
-                          <h6 class="font-weight-bold make pb-2">Cotton</h6>
-                          <p><span>From: </span>Kampala, Uganda</p>
-                      </div>
-                      <div class="dropup d-flex align-items-baseline justify-content-between">
-                          <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
-                              aria-expanded="false">
-                              +
-                          </button>
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                              <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
-                              <a class="dropdown-item btn-dark" href="#">Send a Message</a>
-                              <a class="dropdown-item btn-dark" href="#">More Details</a>
-                          </div>
-                          <h5 class="price">
-                              $310
-                              <br>
-                              <span class="line-through font-weight-light">$420</span>
-                          </h5>
-                      </div>
-                  </div>
+                <div class="card flex-col">
+                    <div class="border-0">
+                        <a href="#"><img class="card-img-top w-100" src="./images/headwear4.jpg" alt="accesory"></a>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-title font-weight-bold"><h3>Handmade necklace</h3></div>
+                        <div class="card-text">
+                            <h6 class="font-weight-bold make pb-2">Cotton</h6>
+                            <p><span>From: </span>Kampala, Uganda</p>
+                        </div>
+                        <div class="dropup d-flex align-items-baseline justify-content-between">
+                            <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                +
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                <a class="dropdown-item btn-dark" href="#">Add to Collection</a>
+                                <a class="dropdown-item btn-dark" href="#">Send a Message</a>
+                                <a class="dropdown-item btn-dark" href="#">More Details</a>
+                            </div>
+                            <h5 class="price">
+                                $310
+                                <br>
+                                <span class="line-through font-weight-light">$500</span>
+                            </h5>
+                        </div>
+                    </div>
                 </div>
-                <div class="card card-accessory">
+                <div class="card flex-col">
                   <div class="border-0">
                       <a href="#"><img class="card-img-top w-100" src="./images/headwear4.jpg" alt="accesory"></a>
                   </div>
@@ -257,17 +257,17 @@
                       </div>
                   </div>
                 </div>
-                <div class="arrow d-sm-none d-md-none d-lg-block"><a href="#" class="fas fa-chevron-right"></a></div>
+                <div class=" accessory-arrow arrow "><a href="#" class="fas fa-chevron-right"></a></div>
             </div>
         </div>
 
         <div>
             <div class="border-bottom my-3 mx-3">
-              <h2><i class="fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
+              <h2 class="my-3 pt-2"><i class="fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
             </div>
-            <div class="accessory  my-4 mx-4">
-                <div class="arrow d-sm-none d-md-none d-lg-block"><a href="#" class="fas fa-chevron-left"></a></div>
-                <div class="card card-accessory">
+            <div class="accessory my-4 mx-4 flex-grid">
+                <div class="accessory-arrow arrow"><a href="#" class="fas fa-chevron-left"></a></div>
+                <div class="card flex-col">
                     <div class="border-0">
                         <a href="#"><img class="card-img-top w-100" src="./images/accessory1.jpg" alt="accesory"></a>
                     </div>
@@ -295,7 +295,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card card-accessory">
+                <div class="card flex-col">
                   <div class="border-0">
                       <a href="#"><img class="card-img-top w-100" src="./images/accessory1.jpg" alt="accesory"></a>
                   </div>
@@ -323,7 +323,7 @@
                       </div>
                   </div>
                 </div>
-                <div class="card card-accessory">
+                <div class="card flex-col">
                   <div class="border-0">
                       <a href="#"><img class="card-img-top w-100" src="./images/accessory1.jpg" alt="accesory"></a>
                   </div>
@@ -351,7 +351,7 @@
                       </div>
                   </div>
                 </div>
-                <div class="card card-accessory">
+                <div class="card flex-col">
                   <div class="border-0">
                       <a href="#"><img class="card-img-top w-100" src="./images/accessory1.jpg" alt="accesory"></a>
                   </div>
@@ -379,7 +379,7 @@
                       </div>
                   </div>
                 </div>
-                <div class="arrow d-sm-none d-md-none d-lg-block"><a href="#" class="fas fa-chevron-right"></a></div>
+                <div class=" accessory-arrow arrow"><a href="#" class="fas fa-chevron-right"></a></div>
             </div>
         </div>
     </main>
