Implement TSE changes

--- a/search.html
+++ b/search.html
@@ -24,7 +24,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav align-items-center font-weight-bold nav-list">
-                <li class="nav-item pb-1 pr-3">
+                <li class="nav-item pb-1">
                 <a class="nav-list" href="index.html"><i class="fas fa-home fa-1x"></i> HOME</a>
                 </li>
                 <li class="nav-item pb-1">
