--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <h1 class="my-3 font-weight-bold">HOT ADS</h1>
                     <div class="carousel-item active">
                         <div class="d-block d-md-flex carousel-pad">
-                            <img src="./images/ad-image.jpg" alt="shirt"/>
+                            <img class="carousel-img" src="./images/ad-image.jpg" alt="shirt"/>
                             <div class="carousel-body pl-4">
                                 <h2 class="font-weight-bold title pb-2">Men's shirt</h2>
                                 <p> 
@@ -106,7 +106,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="d-block d-md-flex carousel-pad">
-                            <img src="./images/ad-image2.jpg" alt="earrings">
+                            <img class="carousel-img" src="./images/ad-image2.jpg" alt="earrings">
                             <div class="carousel-body pl-4">
                                 <h2 class="font-weight-bold title pb-2">Earrings</h2>
                                 <p>
@@ -121,7 +121,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="d-block d-md-flex carousel-pad">
-                            <img src="./images/ad-image3.jpg" alt="headwear">
+                            <img class="carousel-img" src="./images/ad-image3.jpg" alt="headwear">
                             <div class="carousel-body pl-4">
                                 <h2 class="font-weight-bold title pb-2">Headwear</h2>
                                 <p> African Headtie Print Headwrap Ankara Wax Fabric 100% Pure 
@@ -140,7 +140,7 @@
     <!-- main section -->
     <main class="bg-light">
         <div>
-            <div class="border-bottom my-3 mx-3">
+            <div class="border-bottom accessory-heading my-3 mx-3">
               <h2 class ="my-3 pt-2"><i class="pr-2 fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
             </div>
             <div class="accessory  flex-grid my-4 mx-4">
@@ -262,7 +262,7 @@
         </div>
 
         <div>
-            <div class="border-bottom my-3 mx-3">
+            <div class="accessory-heading border-bottom my-3 mx-3">
               <h2 class="my-3 pt-2"><i class="fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
             </div>
             <div class="accessory my-4 mx-4 flex-grid">
