TSE changes implemented

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- navigation -->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
             <a class="" href="index.html">
-                <img class="logo" src="./images/logo.jpg" alt="logo">
+                <img class="logo w-50" src="./images/logo.jpg" alt="logo">
             </a>
             <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -92,7 +92,7 @@
                     <h1 class="my-3 font-weight-bold">HOT ADS</h1>
                     <div class="carousel-item active">
                         <div class="d-block d-md-flex carousel-pad">
-                            <img class="carousel-img" src="./images/ad-image.jpg" alt="shirt"/>
+                            <img src="./images/ad-image.jpg" alt="shirt">
                             <div class="carousel-body pl-4">
                                 <h2 class="font-weight-bold title pb-2">Men's shirt</h2>
                                 <p> 
@@ -143,7 +143,7 @@
             <div class="border-bottom accessory-heading my-3 mx-3">
               <h2 class ="my-3 pt-2"><i class="pr-2 fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
             </div>
-            <div class="accessory  flex-grid my-4 mx-4">
+            <div class="accessory  flex-grid my-4 mx-3">
                 <div class=" accessory-arrow arrow "><a href="#" class="fas fa-chevron-left"></a></div>
                 <div class="card flex-col">
                     <div class="border-0">
@@ -265,7 +265,7 @@
             <div class="accessory-heading border-bottom my-3 mx-3">
               <h2 class="my-3 pt-2"><i class="fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
             </div>
-            <div class="accessory my-4 mx-4 flex-grid">
+            <div class="accessory my-4 mx-3 flex-grid">
                 <div class="accessory-arrow arrow"><a href="#" class="fas fa-chevron-left"></a></div>
                 <div class="card flex-col">
                     <div class="border-0">
