TSE changes implemented

--- a/search.html
+++ b/search.html
@@ -17,7 +17,7 @@
         <!-- navigation -->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
             <a class="" href="index.html">
-                <img class="logo" src="./images/logo.jpg" alt="logo">
+                <img class="w-50" src="./images/logo.jpg" alt="logo">
             </a>
             <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="row border search-row">
-                        <div class="col-3">
+                        <div class="col-4">
                             <div class="border-0 card-img-left">
                                 <a href="#"><img class="card-img-left w-100" src="./images/cloth1.jpg" alt="cloth1"></a>
                             </div>
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                     <div class="row border search-row my-2">
-                        <div class="col-3">
+                        <div class="col-4">
                             <div class="border-0 card-img-left">
                                 <a href="#"><img class="card-img-left w-100" src="./images/cloth2.jpg" alt="Cloth2"></a>
                             </div>
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                     <div class="row border search-row my-2">
-                        <div class="col-3">
+                        <div class="col-4">
                             <div class="border-0 card-img-left">
                                 <a href="#"><img class="card-img-left w-100" src="./images/cloth4.jpg" alt="Cloth4"></a>
                             </div>
@@ -226,7 +226,7 @@
                         </div>
                     </div>
                     <div class="row border search-row my-2">
-                        <div class="col-3">
+                        <div class="col-4">
                             <div class="border-0 card-img-left">
                                 <a href="#"><img class="card-img-left w-100" src="./images/cloth3.jpg" alt="cloth3"></a>
                             </div>
@@ -269,8 +269,6 @@
                             <li><a href="#">5</a> </li>
                             <li><a href="#">6</a> </li>
                             <li><a href="#">7</a> </li>
-                            <li><a href="#">8</a> </li>
-                            <li><a href="#">9</a> </li>
                             <li class="noBorder"><a href="#" class="fas fa-chevron-right arrow"></a></li>
                         </ul>
                     </div>
@@ -282,7 +280,7 @@
     <footer class="mt-4">
         <div class="footer-top pb-3">
             <div>
-                <a href="index.html"><img class="footer-logo" src="./images/logo.jpg" alt="Footer-Logo"></a>
+                <a href="index.html"><img class="w-25" src="./images/logo.jpg" alt="Footer-Logo"></a>
             </div>
             <div class="socials pt-2">
                 <a href="#"><i class="fab fa-facebook"></i></a>
