--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
     <footer class="mt-4">
         <div class="footer-top pb-3">
             <div>
-                <a href="index.html"><img class="footer-logo" src="./images/logo.jpg" alt="Footer-Logo"></a>
+                <a href="index.html"><img class="w-25" src="./images/logo.jpg" alt="Footer-Logo"></a>
             </div>
             <div class="socials pt-2">
                 <a href="#"><i class="fab fa-facebook"></i></a>
