TSE changes implemented

--- a/search.html
+++ b/search.html
@@ -17,7 +17,7 @@
         <!-- navigation -->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
             <a class="" href="index.html">
-                <img class="w-50" src="./images/logo.jpg" alt="logo">
+                <img class="nav-logo w-50" src="./images/logo.jpg" alt="logo">
             </a>
             <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
